Add start of page 85

--- a/dos33.html
+++ b/dos33.html
@@ -7813,10 +7813,10 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     176 
                     177 
                     178 
-                    179 
-                    180 
-                    181
-                    182         DFB 0,0,0,0
+<hr>                    179 ******************************                              ; === Page <a class='page' name='page85'>85</a> ===
+                    180 <a class='d' name='AEC2'     >AEC2        </a>EQU *           ;TELL RELOCTR WHERE RWTS ENDS
+                    181 ******************************
+                    182 <a class='d' name='FOUND'    >FOUND       </a>DFB 0,0,0,0     'SECTOR FOUND' TABLE.
                     183         DFB 0,0,0,0
                     184         DFB 0,0,0,0
                     185         DFB 0,0,0,0
