--- a/dos33.html
+++ b/dos33.html
@@ -7816,10 +7816,10 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 <hr>                    179 ******************************                              ; === Page <a class='page' name='page85'>85</a> ===
                     180 <a class='d' name='AEC2'     >AEC2        </a>EQU *           ;TELL RELOCTR WHERE RWTS ENDS
                     181 ******************************
-                    182 <a class='d' name='FOUND'    >FOUND       </a>DFB 0,0,0,0     'SECTOR FOUND' TABLE.
-                    183         DFB 0,0,0,0
-                    184         DFB 0,0,0,0
-                    185         DFB 0,0,0,0
+3FA8:00 00 00 00    182 <a class='d' name='FOUND'    >FOUND       </a>DFB 0,0,0,0     'SECTOR FOUND' TABLE            ; See: <a class='x' href='#SECTOK'>SECTOK</a>
+3FAC:00 00 00 00    183         DFB 0,0,0,0                                         ; <span class='todo'>TODO</span> DOS 3.3 1980 has these as $FF
+3FB0:00 00 00 00    184         DFB 0,0,0,0
+3FB4:00 00 00 00    185         DFB 0,0,0,0
                     186     FIN                                                     ; Macro started waaay back on Line #<a class='line' href='#FORMATR.014'>014</a>, <a class="x" href="#DSKFORM">DSKFORM</a>
                     187     LST ON
                     188             REP 40
