--- a/dos33.html
+++ b/dos33.html
@@ -7633,7 +7633,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3EAE:60             302 <a class="f" name="SETRTS"     id="SETRTS"    >SETRTS      </a>RTS
 </pre>
 
-<div class='sticky'><hr><hr class='join'>=== <a class="file" name="FORMATR">FORMATR</a> - Format Disk, Page <a class="page" name="page82">82</a>, <a class='ts' href='#T0S8'>T0S8</a> @ $AF..  <a class='ts' href='#T0S9'>T0S9</a> @ $C7, $<span class='n'>BEAF</span> .. $<span class='n'>BFC7</span> ===<hr class='join'><hr></div>
+<div class='sticky'><hr><hr class='join'>=== <a class="file" name="FORMATR">FORMATR</a> - Format Disk, Page <a class='page' name='page82'>82</a> - 85, <a class='ts' href='#T0S8'>T0S8</a> @ $AF..  <a class='ts' href='#T0S9'>T0S9</a> @ $C7, $<span class='n'>BEAF</span> .. $<span class='n'>BFC7</span> ===<hr class='join'><hr></div>
 <pre>
                     001                SBTL '16-SECTOR FORMATTER'
                     002 ****************************
