--- a/dos33.html
+++ b/dos33.html
@@ -7655,40 +7655,40 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3EB1:B1 48          018             STY (IOBPL),Y   VOLUME NUMBER IN IOB.
 3EB3:85 41          019             STA NVOL        FOR FORMATTER.
 3EB5:A9 AA          020             LDA #$<span class='n'>AA</span>        SET Z-PAG LOC TO $AA FOR
-3EB7:85 3E          021             STA AA          TIME DEPENDENT REFERENCES.      ; *sigh* Because AA is _so_ descriptive ...
-3EB9:A0 56          022             LDY #$<span class='n'>56</span>
+3EB7:85 3E          021             STA AA          TIME DEPENDENT REFERENCES.      ; *sigh* Because AA is _so_ descriptive ... WTF does <a class='v' href='#AA'>AA</a> stand for ?!?!
+3EB9:A0 56          022             LDY #$<span class='n'>56</span>                                        ; <a class='magic' name='_????'>magic number</a>
 3EBB:A9 00          023             LDA #<span class='n'>0</span>
 3EBD:85 44          024             STA TRK         TRACK NUMBER, 0 TO 34
-3EBF:99 FF BB       025             STA NBUF2-1,Y   CLEAR NBUFS TO WRITE
-3EC2:88             026             
-                    027 
-                    028 
-                    029 
-                    030 
-                    031 
-                    032 
-                    033 
-                    034 
-                    035 
-                    036 
-                    037 
-                    038 
-                    039 
-                    040 
-                    041 
-                    042 
-                    043 
-                    044 
-                    045 
-                    046 
-                    047 
-                    048 
-                    049 
-                    050 
-                    051 
-                    052 
-                    053 
-3EFD:C9 23          <a class='line' name='FORMATR.054'>054</a>             CMP #$23        CONTINUE IF LESS THEN 35        ; <a class='magic' name='_3EFD'>magic number</a> DISK_MAX_TRACK or at least <a class="v" href="#VNOTRK">VNOTRK</a>
+3EBF:99 FF BB       025 <a class='f' name='CLRNBUF2' >CLRNBUF2    </a>STA NBUF2-1,Y   CLEAR NBUFS TO WRITE
+3EC2:88             026             DEY             ZERO SECTORS
+                    027             BNE CLRNBUF2
+                    028 <a class='f' name='CLRNBUF1' >CLRNBUF1    </a>STA NBUF1,Y
+                    029             DEY
+                    030             BNE CLRNBUF1                                    ;
+                    031             LDA #$50                                        ; <a class='magic' name='_????'>magic number</a> <span class='todo'>TODO</span> <span class='code'>FORMAT_LAST_TRACK EQU 40*2   ; *2 = 2 phases/track</span>
+                    032             JSR SETTRK      FAKE LIKE ON TRACK 80.
+                    033             LDA #$28                                        ; <a class='magic' name='_????'>magic number</a> <span class='todo'>TODO</span> <span class='code'>FORMAT_SECTOR_GAP EQU 40</span>
+                    034             STA NSYNC       BEGIN WITH 40 SELF-SYNC NIBLS.
+                    035 <a class='f' name='FORMTRK'  >FORMTRK     </a>LDA TRK
+                    036             JSR MYSEEK      GOTO NEXT TRACK.
+                    037             JSR WTRACK16    WRITE AND VERIFY TRACK.
+                    038 <a class='f' name='FORMERR1' >FORMERR1    </a>LDA #8          'UNABLE TO FORMAT' ERR CODE.    ; <a class='magic' name='_????'>magic number</a> <span class='todo'>TODO</span>
+                    039             BCS FORMERR     CONTINUE IF NO ERROR.
+                    040             LDA #$30        UP TO 48 SECTOR RETRIES         ; *sigh* <i>Why</i> _this_ value? <a class='magic' name='_????'>magic number</a> <span class='todo'>TODO</span> <span class='code'>FORMAT_MAX_RETRY EQU 48</span>
+                    041             STA RETRYCNT    TO FIND SECTOR 0.               ;        Also, why not in <i>decimal</i>??
+                    042 <a class='f' name='FINDS0'   >FINDS0      </a>STA ANTICIPATE  'UNABLE TO FORMAT'
+                    043             DEC RETRYCNT    DONE 48 RETRIES?
+                    044             BEQ FORMERR     IF SO, 'UNABLE TO FORMAT' ERR.
+                    045             JSR RDADR16     ;READ ADR FIELD.                ; *sigh* Inconsistent comment meta character
+                    046             BCS FINDS0      RETRY IF ERR.
+                    047             LDA SECT        CHECK SECTOR THAT WAS READ.
+                    048             BNE FINDS0      CONTINUE SEARCHING IF NOT SECT 0.
+                    049             JSR READ16      ;NOW READ DATA FIELD.           ; *sigh* Make up your mother falcon mind! <b>Always</b> use <span class='code'>;</span> or not!
+                    050             BCS FINDS0      CONTINUE SEARCH IF ERR.
+                    051 * (NOW POSITIONED PROPERLY FOR NEXT TRACK)                  ; Unknown if leading space after '*' should be 1 space, 1 tab, etc??
+                    052             INC TRK         INCREMENT TRACK NUMBER.         ; /sarcasm <i>Gee, George what does this do?</i>
+                    053             LDA TRK
+<hr>3EFD:C9 23          <a class='line' name='FORMATR.054'>054</a>             CMP #$23        CONTINUE IF LESS THEN 35        ; === Page <a class='page' name='page83'>83</a> === <a class='magic' name='_3EFE'>magic number</a> DISK_MAX_TRACK or at least <a class="v" href="#VNOTRK">VNOTRK</a>
 3EFF:90 D3          055             BCC <a class="x" href="#FORMTRK">FORMTRK</a>
 3F01:18             056             CLC             CLEAR CARRY TO INDICATE 'NO ERR'; === <a class='ts' href='#T0S9'>T0S9</a> ===
 3F02:90 05          057             BCC <a class="x" href="#FORMDONE">FORMDONE</a>    ELSE TURN OFF MOTOR AND RETURN
