Add page ranges XOPNCLS

--- a/dos33.html
+++ b/dos33.html
@@ -1949,7 +1949,7 @@ With that "legalese" out of the way ... enjoy the read!
 2192:60             270             RTS             ; AND GOTO COMMAND              ; ..] classic technique of 6502 jump table, use RTS to "call" the function pointer
 </pre>
 
-<div class='sticky'><hr><hr class='join'>=== <a class="file" name="XOPNCLS">XOPNCLS</a> - Execute Open / Close, Page <a class="page" name="page150">150</a>, <a class='ts' href='#T1S0'>T1S0</a> - <a class='ts' href='#T1S2'>T1S2</a>, $<span class='n'>A193</span> .. $<span class='n'>A330</span>  ===<hr class='join'><hr></div>
+<div class='sticky'><hr><hr class='join'>=== <a class="file" name="XOPNCLS">XOPNCLS</a> - Execute Open / Close, Pages <a class="page" name='page150'>150</a> - 154, <a class='ts' href='#T1S0'>T1S0</a> - <a class='ts' href='#T1S2'>T1S2</a>, $<span class='n'>A193</span> .. $<span class='n'>A330</span>  ===<hr class='join'><hr></div>
 <pre>
                     001             PAGE
                     002 ;                                                           ; Setup: LineLength (current char offset in Line Buffer to process)
