Fix page 40 header DOSGOERR

--- a/dos33.html
+++ b/dos33.html
@@ -2789,7 +2789,7 @@ With that "legalese" out of the way ... enjoy the read!
 26A7:60             254             RTS
 </pre>
 
-<div class='sticky'><hr><hr class='join'>=== <a class="file" name="DOSGOER">DOSGOER</a> - Print Error message, Page <a class="page" name="page40">40</a>, <a class='ts' href='#T1S5'>T1S5</a> - <a class='ts' href='#T1S6'>T1S6</a>, $<span class='n'>A6A8</span> .. $<span class='n'>A7D3</span> ===<hr class='join'><hr></div>
+<div class='sticky'><hr><hr class='join'>=== <a class="file" name="DOSGOER">DOSGOER</a> - Print Error message, Pages <a class="page" name='page40'>40</a> - 43, <a class='ts' href='#T1S5'>T1S5</a> - <a class='ts' href='#T1S6'>T1S6</a>, $<span class='n'>A6A8</span> .. $<span class='n'>A7D3</span> ===<hr class='join'><hr></div>
 <pre>
                     001             PAGE
                     002 ;
